(Format: Year/Month/Day)
Changes for 0.9.1:
*03/03/03:
   * Add code for Toolbar modes (Simon)
     AtomHandler.hh EventManager.cc Ewmh.hh/cc Gnome.hh/cc 
     IconBar.hh/cc Screen.hh/cc Toolbar.hh/cc ToolbarHandler.hh/cc 
     Window.cc fluxbox.cc
 
------------------------------------------- 
Changes for 0.9.0:
*03/02/23:
   * Fixed auto hide option for toolbar menu (Henrik)
     Screen.cc, Toolbar.cc
   * Fixed vertical workspace name editing (Henrik)
     Toolbar.cc
   * Added Meta style (Thanks Joel)
   * Disabled background image menu in fluxbox-generate_menu 
*03/02/22:
   * Fix frame size and window moving/resizing/outline bugs (Simon)
     Window.cc FbWinFrame.cc
   * s/""/'' so the shell does not have to expand the contents of the string
     in fluxbox_generatemenu (Han)
   * Added portability notes in fluxbox_generatemenu (Han)
   * Added file utils menu item in fluxbox_generatemenu (Han)
   * Fixed a resize bug (Henrik)
     Window.cc
   * Fixed bug in menu bullet type (Henrik)
     FbTk/MenuTheme.cc
   * Fixed sloppy focus to use new event handler model (Simon)
     Screen.hh/cc Window.hh/cc fluxbox.hh/cc   
   * Fixed auto hide bug in Toolbar (Henrik)
     Toolbar.cc
   * Fixed default white color bug in Theme (Henrik)
     FbTk/Theme.cc
   * Added toolbar placement menu and fixed resource saving for toolbar placement (Henrik)
	 Toolbar.cc, Screen.cc/hh
   * Fixed vertical text for icons in Iconbar (Henrik)
     IconBar.hh/cc, Toolbar.cc
*03/02/20:
   * Fixed a size bug without titlebar (Henrik)
     Window.cc, FbWinFrame.cc
   * Fixed a clientmenu update bug (Henrik)
     Workspace.hh/cc
   * Fixed slit client resize bug (Henrik)
     Slit.hh/cc
*03/02/19:
   * Fixed transient raise/lower (Henrik)
*03/02/17:
   * Added layer menus for windows, toolbar, and slit, plus associated  (Simon)
     resources. Cleaned up some cruft from the previous layering setup.